// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HotelList renders nothing when state = "None" 1`] = `""`;

exports[`HotelList renders the error component when state = "Error" 1`] = `
<div
  className="hotel-list"
>
  <Error
    message="Error loading Hotel Data, please refresh to try again."
  />
</div>
`;

exports[`HotelList renders the hotels when state = "Success" 1`] = `
<div
  className="hotel-list"
>
  <div
    className="hotel-list__row"
    key="0"
  >
    <p
      className="hotel-list__title"
    >
      hotelone
    </p>
    <p>
      Rating: 
      5
    </p>
    <p>
      Facilities: 
      car park, pool
    </p>
  </div>
  <div
    className="hotel-list__row"
    key="1"
  >
    <p
      className="hotel-list__title"
    >
      hoteltwo
    </p>
    <p>
      Rating: 
      3
    </p>
    <p>
      Facilities: 
      car park, gym
    </p>
  </div>
  <div
    className="hotel-list__row"
    key="2"
  >
    <p
      className="hotel-list__title"
    >
      hotelthree
    </p>
    <p>
      Rating: 
      3
    </p>
    <p>
      Facilities: 
    </p>
  </div>
</div>
`;

exports[`HotelList renders the loading component when state = "Loading" 1`] = `
<div
  className="hotel-list"
>
  <Loading
    message="Loading Hotel Data."
  />
</div>
`;
